[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/player-idle.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/cursor.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/VT323-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Sound/Effects/sword-reflect.wav" type="AudioStream" id=5]
[ext_resource path="res://Sound/Effects/fire-ball.wav" type="AudioStream" id=6]
[ext_resource path="res://Sound/Effects/page.wav" type="AudioStream" id=7]
[ext_resource path="res://Sound/Effects/glass-shot 1.wav" type="AudioStream" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.23758
height = 2.84762

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[sub_resource type="CircleShape2D" id=3]
radius = 27.8107

[sub_resource type="CircleShape2D" id=4]
radius = 3.09325

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Cursor" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Cursor"]
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -19.9017
margin_top = -24.5616
margin_right = 20.0983
margin_bottom = -10.5616
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 2 )
text = "I don't need this"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Influence" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Influence"]
shape = SubResource( 3 )

[node name="FormTimer" type="Timer" parent="."]

[node name="reflect-noise" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="fire-noise" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="page-noise" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="portal_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="portal_area"]
shape = SubResource( 4 )

[node name="Potion" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -20.0
[connection signal="area_entered" from="Influence" to="." method="_on_Influence_area_entered"]
[connection signal="timeout" from="FormTimer" to="." method="_on_FormTimer_timeout"]
[connection signal="area_entered" from="portal_area" to="." method="_on_portal_area_area_entered"]
